# agent-flash

./: .gitignore  AGENTS.md  IMPLEMENTATION_CHECKLIST.md  POC_RESOURCES.md  README.md  architecture.drawio  list_models.py  pyproject.toml  requirements.txt  test_image_recognition.py  user_flow.drawio
addon/CADRepairMCP/: Init.py  InitGui.py  __init__.py
addon/CADRepairMCP/rpc_server/: __init__.py  parts_library.py  rpc_server.py  serialize.py
backend/: README.md  app.py  inference.py  providers.py  schemas.py  smoke_test.py
client/: README.md  app.js  index.html  styles.css
model_ingest/: render_assembly_top_view_occ.py  render_top_view_occ.py
resources/: poc_resources_gid428509048.csv
resources/models/extracted/: 10928 - Technic - Gear 8 Tooth - Dark Gray_2664N468.STEP  11478 - Technic - Liftarm Thin 1 x 5 - Axle Holes - Black.STEP  11478 - Technic - Liftarm Thin 1 x 5 - Axle Holes - Yellow.STEP  15462 - Technic, Axle 5L with Stop - Reddish Brown.STEP  24116 - Technic - Panel Curved 3 x 5 x 3 - Yellow.STEP  30433 - Volvo Wheel Loader.STEP  (+21 more)
scripts/: run_poc.sh  start_poc_detached.sh  start_poc_https.sh  status_poc.sh  status_poc_https.sh  stop_poc.sh  stop_poc_https.sh
src/: __init__.py  config.py  server.py
src/core/: __init__.py  analysis.py  demo.py  model_context.py  parts_database.py  prompts.py  rendering.py  response_parser.py
src/mcp_tools/: __init__.py  base.py  client.py  gemini.py  registry.py  visibility.py
src/ui/: __init__.py  components.py  demo.py  sidebar.py  tabs.py
src/utils/: __init__.py  color.py  image.py  logger.py
(+6 files in other folders)
