[project]
name = "cad-repair-assistant"
version = "0.1.0"
description = "AI-powered CAD repair assistant for automobile parts using FreeCAD and MCP"
readme = "README.md"
authors = [{ name = "CAD Helper", email = "cad-helper@example.com" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "streamlit>=1.28.0",
    "anthropic>=0.18.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
]

[project.scripts]
cad-repair-mcp = "cad_repair_assistant.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = ["assets", "results", "examples"]

[tool.hatch.build.targets.wheel]
packages = ["src/cad_repair_assistant"]
